[package]
name = "vim9jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[features]

[workspace]
members = [
    "crates/vim9-lexer",
    "crates/vim9-parser",
    "crates/vim9-gen",
]
