[package]
name = "vim9jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
gen = { path = "crates/vim9-gen", package = "vim9-gen" }
parser = { path = "crates/vim9-parser", package = "vim9-parser" }

[dev-dependencies]

[features]

[workspace]
members = [
    "crates/vim9-lexer",
    "crates/vim9-parser",
    "crates/vim9-gen",
    "crates/macros",
    "crates/vimfuncs",
    "crates/format/",
]
default-members = [
    "crates/vim9-lexer",
    "crates/vim9-parser",
    "crates/vim9-gen",
    "."
]
